--- a/exercicios/ex012/tabela001.html
+++ b/exercicios/ex012/tabela001.html
@@ -17,7 +17,7 @@
             border: 4px solid rebeccapurple;
         }
 
-        .tabela01  td{
+        .tabela01 , .tabela02 , td{
             border: 1px solid black;
             padding: 8px;
         }
@@ -40,10 +40,7 @@
               border-collapse: collapse;
             text-align: center;
         }
-        .tabela02  td{
-            border: 1px solid black;
-            padding: 8px;
-        }
+     
 
         .numero{
             text-align: right;
